# fast-transcript

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  build.rs  pyproject.toml  setup.py
.githooks/: pre-commit
.github/workflows/: ci.yml  fuzz.yml  release.yml
docs/: crates-io-publishing.md  fuzzing.md  pypi-publishing.md  render-diarized-script.md  subtitle-experiments-plan.md
fuzz/: Cargo.toml
fuzz/corpus/cli_args/: seed_chunk_override.txt  seed_diarize_coreml_num_speakers.txt  seed_diarize_lseend_threshold.txt  seed_hyphen_prefixed_path.txt  seed_invalid_conflicting_diarization.txt  seed_invalid_conflicting_output.txt  seed_invalid_unknown_short_flag.txt  seed_output_flag_plain_text.txt  seed_positional_output_dir_speakers.txt  seed_positional_stdout_dash.txt  seed_remote_local_alias.txt  seed_srt_clean.txt  seed_stdout_json_no_diarization.txt  seed_vtt_raw.txt
fuzz/fuzz_targets/: cli_args.rs
python/fscript/: README.md  __main__.py  _cli.py
reports/: subtitle-qa-2026-05-31.md
scripts/: build_pypi_wheel.py  install-git-hooks.sh  render_diarized_transcript_script.py
src/: audio.rs  cli.rs  diarization.rs  lib.rs  main.rs  model.rs  output.rs  progress.rs  remote.rs  transcribe.rs  types.rs
tests/: test_cli_smoke.py  test_pypi_wrapper.py  test_release_artifacts.py  test_render_diarized_transcript_script.py
work/goals/feature-audit/: .gitignore  build_feature_tracker.mjs  feature-tracker.xlsx  feature_tracker_data.json
