[package]
name = "fast-transcript"
version = "1.1.1"
edition = "2021"
description = "Fast local transcription for large lectures with NVIDIA Parakeet ONNX"
license = "MIT"
repository = "https://github.com/brenorb/fast-transcript"
homepage = "https://github.com/brenorb/fast-transcript"
readme = "README.md"
keywords = ["transcription", "speech-to-text", "asr", "onnx", "parakeet"]
categories = ["command-line-utilities", "multimedia::audio"]

[[bin]]
name = "fscript"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
directories = "6.0"
flate2 = "1.1"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tar = "0.4"
tempfile = "3.14"
transcribe-rs = { version = "=0.3.8", features = ["onnx"] }
