[package]
name = "fast-transcript-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.fast-transcript]
path = ".."

[[bin]]
name = "cli_args"
path = "fuzz_targets/cli_args.rs"
test = false
doc = false
bench = false
